# tgw_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml  tgw_planner_full_refactor_realtime_probabilistic_mapping.md
config/: default_planner_params.yaml  experience_planner_common.yaml  experience_planner_params.yaml  experience_planner_real.yaml  experience_planner_sim.yaml  realtime_mapping_params.yaml
docs/: README.md  hil_test_plan.md  map_input_modes.md  pbstream_experience_roadmap.md  pbstream_experience_tasklist.md  realtime_bag_experiment_2026-06-02.md  realtime_bag_workflow.md  stair_flight_segmentation_issues.md  tgw_current_status_for_review.md
docs/exp/: README.md  edge_benchmark_plan.md  golden_scenes.md  hybrid_path_quality_samples.md
docs/exp/scene_20260608/: hybrid_path_quality_samples.md  same_floor_core_sweep.md
docs/exp/scene_20260610/: hybrid_path_quality_samples.md  same_floor_core_sweep.md
docs/question/: README.md  tgw_local_tracking_review.md  tgw_multifloor_path_planning_review.md
include/tgw_planner/core/: boundary_extractor.hpp  clearance_field.hpp  experience_backbone_graph.hpp  experience_geometry_index.hpp  experience_planner_defaults.hpp  experience_snapshot.hpp  experience_surface_builder.hpp  experience_surface_graph.hpp  global_path_tracker.hpp  grid_index.hpp  hybrid_experience_planner.hpp  local_path_smoother.hpp  map_snapshot.hpp  mapping_options.hpp  n3map_reader.hpp  navigation_map.hpp  path_validator.hpp  pcd_artifact_detector.hpp  planner_connectivity_layer.hpp  planning_types.hpp  probabilistic_voxel_map.hpp  raycast_integrator.hpp  reachable_expander.hpp  regulated_pure_pursuit.hpp  risk_field.hpp  robot_footprint.hpp  rolling_local_map.hpp  route_progress_tracker.hpp  surface_astar_planner.hpp  surface_extractor.hpp  surface_map.hpp  trajectory_projector.hpp  voxel_astar_planner.hpp
launch/: experience_planner.launch.py  experience_planner_real.launch.py  experience_planner_sim.launch.py  pcd_to_path_mvp.launch.py  realtime_mapping.launch.py
msg/: MapBuildStats.msg  MappingStats.msg  PlannerStats.msg
plugins/: plugin_description.xml
rviz/: experience_debug.rviz  experience_sim.rviz  tgw_planner.rviz
scripts/: plot_tgw_hybrid_path.py  replay_tgw_global_path.py  run_dirty_map_tests.sh  run_realtime_bag_plan_probe.sh  run_realtime_mapping_sim_tests.sh  run_reference_pcd_smoke_tests.sh  run_synthetic_surface_scene_tests.sh  run_tgw_golden_regression.py  world_to_tgw_pcd.py
src/core/: boundary_extractor.cpp  clearance_field.cpp  experience_backbone_graph.cpp  experience_geometry_index.cpp  experience_planner_defaults.cpp  experience_surface_builder.cpp  experience_surface_graph.cpp  global_path_tracker.cpp  hybrid_experience_planner.cpp  local_path_smoother.cpp  n3map_reader.cpp  navigation_map.cpp  path_validator.cpp  pcd_artifact_detector.cpp  planner_connectivity_layer.cpp  probabilistic_voxel_map.cpp  raycast_integrator.cpp  reachable_expander.cpp  regulated_pure_pursuit.cpp  risk_field.cpp  robot_footprint.cpp  rolling_local_map.cpp  route_progress_tracker.cpp  surface_astar_planner.cpp  surface_extractor.cpp  trajectory_projector.cpp  voxel_astar_planner.cpp
src/humble/: clicked_point_router_node.cpp  realtime_mapping_node.cpp  tgw_experience_planner_node.cpp  tgw_planner_node.cpp
src/rviz_plugins/: tgw_pose_tool.cpp
src/tools/: experience_benchmark.cpp  experience_global_sweep.cpp  surface_pcd_smoke.cpp  tomogram_pcd_smoke.cpp
srv/: ExportStaticCloud.srv  GetSnapshot.srv  LoadMap.srv  PlanPath.srv  SaveMap.srv  SetBlockedRegion.srv  SetClickMode.srv
test/: experience_core_smoke.cpp  phase1_core_smoke.cpp
